text area modification

--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@
     /* color: #4500ff; */
  */
 
-textarea {
-    color: #fff;
+ #textinput{
+    color: #fff; 
     font-size: 15px;
     background: #4b548b;
     border-radius: 12px;
