--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 .hero {
     width: 100%;
     min-height: 100vh;
-    /* background: linear-gradient(90deg,#833ab4,#ffae3c); */
-    background-image: url(bg.jpg);
+    /* background: linear-gradient(90deg, #833ab4, #ffae3c); */
+    background-image: url('bg.jpg'); /* Ensure bg.jpg is in the correct path */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,36 +16,29 @@
     color: #fff;
     text-shadow: rgb(51, 51, 51) 4px 4px 0px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
 }
 
 .hero h1 {
     font-size: 44px;
-    
     font-weight: 600;
     margin-bottom: 7px;
 }
 
-/* .hero h1 span {
-    /* color: #4500ff; */
- */
-
- #textinput{
-    color: #fff; 
-    font-size: 15px;
-    background: #4b548b;
-    border-radius: 12px;
-    padding: 20px;
-    margin-bottom: 30px;
-    outline: 0;
-    box-shadow: 10px 8px 3px 3px rgb(0, 0, 0);
-
+.hero textarea {
+    color: #fff !important;
+    font-size: 15px !important;
+    background: #4b548b !important;
+    border-radius: 12px !important;
+    padding: 20px !important;
+    margin-bottom: 30px !important;
+    outline: 0 !important;
+    box-shadow: 10px 8px 3px 3px rgb(0, 0, 0) !important;
 }
 
-textarea::placeholder {
-    font-size: 22px;
-    color: #fff;
-    font-style: italic;
+.hero textarea::placeholder {
+    font-size: 22px !important;
+    color: #fff !important;
+    font-style: italic !important;
 }
 
 .row {
@@ -58,7 +51,6 @@ textarea::placeholder {
 
 button img {
     width: 30px;
-
     margin-right: 5px;
 }
 
@@ -77,8 +69,6 @@ button {
     justify-content: center;
     align-items: center;
     margin-right: 12px;
-
-
 }
 
 button:hover {
@@ -89,16 +79,12 @@ select {
     flex: 0 0 200px;
     color: #fff;
     height: 30px;
-
     padding: 0 20px;
     background: #403d84;
     outline: 0;
     border: none;
     border-radius: 35px;
-
 }
-
-
 
 select:hover {
     box-shadow: black 2px 2px 10px 2px;
